--- a/huita.html
+++ b/huita.html
@@ -20,8 +20,8 @@
         <img src="img/ANRIL_house_nighttime_exterior-07-1-2.jpeg">
     </div>
 </section>
-<!--
-<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>-->
+
+<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>&ndash;&gt;
 <script src="node_modules/slick-1.8.1/slick/slick.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="ebala.js"></script>
 
