--- a/huita.html
+++ b/huita.html
@@ -29,4 +29,4 @@
 </html>
 
 
-//toDO: 2 sliders of of them will be donat and they should sync
+//toDO: 2 sliders one of them will be donat and they should sync
