--- a/huita.html
+++ b/huita.html
@@ -3,30 +3,39 @@
 <head>
     <title>Slick Playground</title>
     <meta charset="UTF-8">
+
     <link rel="stylesheet" type="text/css" href="node_modules/slick-1.8.1/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="node_modules/slick-1.8.1/slick/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="chlen.css">
 </head>
 <body>
 
-<section class="Slider ">
+<section class="Slider">
     <div>
-        <img src="img/ANRIL_house_nighttime_exterior-03-1-2.jpeg">
+        <img src="img/ANRIL_house_nighttime_exterior-03-1-2.jpeg" class="img--itself">
+        <div class="test-content">
+            <img src="img/background.png" class="img--background">
+        </div>
+
     </div>
     <div>
         <img src="img/ANRIL_house_nighttime_exterior-07-1-2.jpeg">
+        <div class="test-content">
+            <img src="img/background.png" class="img--background">
+        </div>
     </div>
     <div>
-        <img src="img/ANRIL_house_nighttime_exterior-07-1-2.jpeg">
+        <img src="img/ANRIL-house-by-Adapt-Exterior-Roof-5-1920.jpeg">
+        <div class="test-content">
+            <img src="img/background.png" class="img--background">
+        </div>
     </div>
 </section>
 
-<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>&ndash;&gt;
+<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
 <script src="node_modules/slick-1.8.1/slick/slick.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="ebala.js"></script>
 
 </body>
 </html>
 
-
-//toDO: 2 sliders one of them will be donat and they should sync
