--- a/huita.html
+++ b/huita.html
@@ -10,27 +10,57 @@
 </head>
 <body>
 
-<section class="Slider">
-    <div>
-        <img src="img/ANRIL_house_nighttime_exterior-03-1-2.jpeg" class="img--itself">
-        <div class="test-content">
-            <img src="img/background.png" class="img--background">
+<section class="slider-container">
+
+    <div class="Slider">
+
+        <div class="first">
+            <div>
+                <img src="img/ANRIL_house_nighttime_exterior-03-1-2.jpeg" class="img--itself">
+            </div>
+            <div class="black--mask">
+                <img src="img/background.png" >
+            </div>
+            <svg class="donut">
+                
+            </svg>
+        </div>
+
+        <div class="second">
+            <div>
+                <img src="img/ANRIL_house_nighttime_exterior-07-1-2.jpeg">
+            </div>
+            <div class="black--mask">
+                <img src="img/background.png" >
+            </div>
+            .
+        </div>
+
+        <div class="third">
+            <div>
+                <img src="img/ANRIL-house-by-Adapt-Exterior-Roof-5-1920.jpeg">
+            </div>
+            <div class="black--mask">
+                <img src="img/background.png">
+            </div>
         </div>
 
     </div>
-    <div>
-        <img src="img/ANRIL_house_nighttime_exterior-07-1-2.jpeg">
-        <div class="test-content">
-            <img src="img/background.png" class="img--background">
-        </div>
+
+    <div class="sl-arrow">
+        <div id="prev" class="slick-arrow" style="">Повторити</div>
+        <div id="next" class="slick-arrow" style="">Радіти</div>
     </div>
-    <div>
-        <img src="img/ANRIL-house-by-Adapt-Exterior-Roof-5-1920.jpeg">
-        <div class="test-content">
-            <img src="img/background.png" class="img--background">
-        </div>
+
+</section>
+
+<section class="test--donut">
+    <div class="donut--background">
+        <img src="img/ANRIL_house_nighttime_exterior-03-1-2.jpeg" alt="">
+        <div class="slide-name">Жити</div>
     </div>
 </section>
+
 
 <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
 <script src="node_modules/slick-1.8.1/slick/slick.js" type="text/javascript" charset="utf-8"></script>
