--- a/huita.html
+++ b/huita.html
@@ -16,32 +16,40 @@
 
         <div class="first">
             <div>
-                <img src="img/ANRIL_house_nighttime_exterior-03-1-2.jpeg" class="img--itself">
+                <img src="img/Rectangle%201.png" class="img--itself">
             </div>
             <div class="black--mask">
                 <img src="img/background.png" >
             </div>
-            <svg class="donut">
-                
-            </svg>
+            <div class="donut">
+                <img src="img/Mask%20Group%20live.png" alt="">
+                <span>Жити</span>
+            </div>
         </div>
 
         <div class="second">
             <div>
-                <img src="img/ANRIL_house_nighttime_exterior-07-1-2.jpeg">
+                <img src="img/Rectangle%202.png">
             </div>
             <div class="black--mask">
                 <img src="img/background.png" >
             </div>
-            .
+            <div class="donut">
+                <img src="img/Mask%20Group%202.png" alt="">
+                <span>Радіти</span>
+            </div>
         </div>
 
         <div class="third">
             <div>
-                <img src="img/ANRIL-house-by-Adapt-Exterior-Roof-5-1920.jpeg">
+                <img src="img/Rectangle%203.png">
             </div>
             <div class="black--mask">
                 <img src="img/background.png">
+            </div>
+            <div class="donut">
+                <img src="img/Mask%20Group%203.png" alt="">
+                <span>Повторити</span>
             </div>
         </div>
 
@@ -54,14 +62,14 @@
 
 </section>
 
-<section class="test--donut">
-    <div class="donut--background">
-        <img src="img/ANRIL_house_nighttime_exterior-03-1-2.jpeg" alt="">
-        <div class="slide-name">Жити</div>
-    </div>
-</section>
+<!--<section class="test&#45;&#45;donut">-->
+<!--    <div class="donut&#45;&#45;background">-->
+<!--        <img src="img/ANRIL_house_nighttime_exterior-03-1-2.jpeg" alt="">-->
+<!--        <div class="slide-name">Жити</div>-->
+<!--    </div>-->
+<!--</section>-->
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
 <script src="node_modules/slick-1.8.1/slick/slick.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="ebala.js"></script>
