--- a/huita.html
+++ b/huita.html
@@ -4,45 +4,56 @@
     <title>Slick Playground</title>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" type="text/css" href="node_modules/slick-1.8.1/slick/slick.css">
-    <link rel="stylesheet" type="text/css" href="node_modules/slick-1.8.1/slick/slick-theme.css">
-    <link rel="stylesheet" type="text/css" href="chlen.css">
+    <link rel="stylesheet" type="text/css" href="node_modules/slick-slider/slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="node_modules/slick-slider/slick/slick-theme.css">
+    <link rel="stylesheet" type="text/css" href="styleshit.css">
 </head>
 <body>
 
-<section class="slider-container">
+<section class="slider-section">
 
-    <div class="Slider">
+    <div class="slider-main">
 
-        <div class="first">
+        <div class="slider-container first">
             <div>
-                <img src="img/ANRIL_house_nighttime_exterior-03-1-2.jpeg" class="img--itself">
+                <img src="img/Rectangle%201.png">
             </div>
             <div class="black--mask">
                 <img src="img/background.png" >
             </div>
-            <svg class="donut">
-                
-            </svg>
+            <div class="donut">
+                <img src="img/Mask%20Group%20live.png" alt="">
+                <span>Жити</span>
+            </div>
+            <img src="img/btn.png" class="bottom-button">
         </div>
 
-        <div class="second">
+        <div class="slider-container second">
             <div>
-                <img src="img/ANRIL_house_nighttime_exterior-07-1-2.jpeg">
+                <img src="img/Rectangle%202.png">
             </div>
             <div class="black--mask">
                 <img src="img/background.png" >
             </div>
-            .
+            <div class="donut">
+                <img src="img/Mask%20Group%202.png" alt="">
+                <span>Радіти</span>
+            </div>
+            <img src="img/btn.png" class="bottom-button">
         </div>
 
-        <div class="third">
+        <div class="slider-container third">
             <div>
-                <img src="img/ANRIL-house-by-Adapt-Exterior-Roof-5-1920.jpeg">
+                <img src="img/Rectangle%203.png">
             </div>
             <div class="black--mask">
                 <img src="img/background.png">
             </div>
+            <div class="donut">
+                <img src="img/Mask%20Group%203.png" alt="">
+                <span>Повторити</span>
+            </div>
+            <img src="img/btn.png" class="bottom-button">
         </div>
 
     </div>
@@ -54,16 +65,10 @@
 
 </section>
 
-<section class="test--donut">
-    <div class="donut--background">
-        <img src="img/ANRIL_house_nighttime_exterior-03-1-2.jpeg" alt="">
-        <div class="slide-name">Жити</div>
-    </div>
-</section>
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-<script src="node_modules/slick-1.8.1/slick/slick.js" type="text/javascript" charset="utf-8"></script>
+<script src="node_modules/slick-slider/slick/slick.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="ebala.js"></script>
 
 </body>
